changed labels for alignment-issue

--- a/src/login.css
+++ b/src/login.css
@@ -11,7 +11,7 @@
   
   h1, .login {
     margin: 0;
-    width: 80%;
+    /*width: 80%;*/
   }
 }
 
